[project]
name = "thenvoi-testing-python"
version = "0.1.0"
description = "Shared Python testing utilities for Thenvoi repositories - fixtures, factories, and fakes"
readme = "README.md"
license = "MIT"
authors = [{ name = "Thenvoi" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
# For repos using thenvoi_rest client (integration tests)
rest = ["thenvoi-client-rest @ git+https://github.com/thenvoi/fern-python-sdk.git"]
# For repos using WebSocket testing
websocket = ["websockets>=12.0"]
# Full installation
full = ["thenvoi-testing-python[rest,websocket]"]
# Development
dev = [
    "thenvoi-testing-python[full]",
    "ruff>=0.1.0",
    "pyrefly>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.entry-points.pytest11]
thenvoi_testing = "thenvoi_testing.fixtures"

[project.urls]
Repository = "https://github.com/thenvoi/thenvoi-testing-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/thenvoi_testing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["thenvoi_testing"]
